--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script async data-domain="cartesanitaireniger.org" src="https://plausible.io/js/pa-xcE1IBw-mFPHHj4Acbzug.js"></script>
+  <script async src="https://plausible.io/js/pa-LLBLnsOsncstVV3okHgPr.js"></script>
   <script>
     window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
     plausible.init({
